# My_Learning_DevOps

./: .env.example  Cargo.toml  LICENSE  README.md  aws.excalidraw
aws/: aws.excalidraw  aws.md
aws/examples/: Cargo.toml
aws/examples/examples/: kms_signer.rs  kms_signer_app.rs  kms_signer_cli.rs
aws/examples/src/: lib.rs
azure/: azure.excalidraw  azure.md
azure/examples/: Cargo.toml
azure/examples/examples/: extract_table.rs
azure/examples/src/: lib.rs
azure/examples/src/docintel/: mod.rs  table_extract.rs
docker/: README.md
docker/rust/: README.md
