[package]
name = "aws-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8", default-features = false, features = ["rt-tokio", "default-https-client", "behavior-version-latest", "credentials-login"] }
# 309 deps. Use this if alloy is used in a project with other features as well.
# alloy = {version = "2.0.0", default-features = false, features = ["signers", "signer-aws"]}
# 307 deps
alloy-signer = { version = "2.0.0" }
alloy-signer-aws = "2.0.0"
eyre = "0.6.12"
tokio = {version = "1.52.1", features = ["rt-multi-thread", "macros"]}